--- a/RobotZombies/Assembly-CSharp.csproj
+++ b/RobotZombies/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\zombieHoverStats.cs" />
+     <Compile Include="Assets\Scripts\zombieSounds.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
